--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,11 @@
 before_script:
   - export RUST_BACKTRACE=1
   - echo $JAVA_HOME
+  - echo $LD_LIBRARY_PATH
 env:
   global:
     - JAVA_HOME=/usr/lib/jvm/java-8-oracle
+    - LD_LIBRARY_PATH=$JAVA_HOME/jre/lib/amd64/server
 jdk:
   - oraclejdk8
 language: rust
